--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,35 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.cwi.tcc_android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
+        android:name=".MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TCCAndroid">
+        android:theme="@style/Theme.TCCAndroid"
+        android:usesCleartextTraffic="true">
         <activity
-            android:name=".MainApplication"
-            android:exported="true">
+            android:name=".presentation.feature.characters.CharactersActivity"
+            android:exported="false"
+            android:label="@string/txt_characters"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".presentation.feature.dices.DicesActivity"
+            android:exported="false"
+            android:label="@string/txt_dices"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".presentation.feature.compendium.CompendiumActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.TCCAndroid.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
