--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TCCAndroid"
-        android:usesCleartextTraffic="true"
-        android:fullBackupContent="">
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".presentation.feature.compendium.spells.SpellHostActivity"
             android:exported="false"
@@ -29,9 +28,9 @@
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
-            android:name=".presentation.feature.favorites.FavoritesActivity"
+            android:name=".presentation.feature.favorites.FavoriteHostActivity"
             android:exported="false"
-            android:label="@string/txt_characters"
+            android:label="@string/txt_favorites"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
