--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,14 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <uses-feature
+        android:name="android.hardware.sensor.accelerometer"
+        android:required="true" />
+
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -38,6 +43,7 @@
             android:exported="false"
             android:label="@string/txt_dices"
             android:screenOrientation="portrait"
+            android:theme="@style/Theme.TCCAndroid.NoActionBar"
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".presentation.feature.compendium.CompendiumActivity"
